--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,6 @@ a, h1, h2, h3, h4, h5, h6, p, i, b, ul, li, span {
 }
 @media screen and (max-width: 600px){
   html {
-    background-image: url("../img/phone.jpg");
     background-size: cover;
     -webkit-background-size: cover 100%;
     -o-background-size: cover 100%;
@@ -82,9 +81,9 @@ a, h1, h2, h3, h4, h5, h6, p, i, b, ul, li, span {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: cover;
-    overflow: -Scroll;
-    overflow-y: hidden;
-    overflow-x: hidden;
+  }
+  .bg {
+    background-image: url("../img/phone.jpg");
   }
   .copyright {
     color: white;
@@ -276,8 +275,7 @@ a, h1, h2, h3, h4, h5, h6, p, i, b, ul, li, span {
   }
 }
 @media screen and (min-width: 600px){
-  html{
-    background: url("../img/bg.png") no-repeat;
+  html {
     background-size: auto;
     -webkit-background-size: auto;
     -o-background-size: auto;
@@ -285,6 +283,9 @@ a, h1, h2, h3, h4, h5, h6, p, i, b, ul, li, span {
     overflow: -Scroll;
     overflow-y: hidden;
     overflow-x: hidden;
+  }
+  .bg {
+    background: url("../img/bg.png") no-repeat;
   }
 }
 html>div{
