--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,7 +5,7 @@
 }
 html {
   height: 100%;
-  -webkit-tap-highlight-color:rgba(255, 255, 255, 0.1);
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.1);
   -webkit-focus-ring-color: rgba(0, 0, 0, 0);
 }
 .frosted-glass {
@@ -157,6 +157,9 @@ span {
 }
 #bookmark_part {
   text-align: center;
+  width: 267px;
+  margin-left: 50px;
+  margin-right: 50px;
   max-width: 600px;
   background-color: transparent;
   margin: 0 auto;
@@ -169,12 +172,17 @@ span {
   font-size: 0;
 }
 .box {
+  -webkit-animation: fadeInDown 1s;
+  animation: fadeInDown 1s;
   margin: 4px 9px 4px;
   width: 80px;
+  height: 32px;
   border: 0;
   position: relative;
+  position: relative;
   display: inline-block;
-  text-align: center;
+  width: 70px;
+  border: 0;
 }
 .box a {
   width: 100%;
@@ -193,11 +201,41 @@ span {
 }
 .title {
   border-radius: 4px;
+  background-color: #fffffff;
+  font-size: 16px;
+  height: 32px;
+  width: 70px;
+  line-height: 32px;
+  padding: 0 10px 0 20px;
   color: #ffffff;
-  width: 80px;
-  line-height: 80px;
-  height: 80px;
-  font-size: 15px;
+}
+#content {
+  width: 100%;
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.icon {
+  width: 3em;
+  height: 3em;
+  max-width: 72px;
+}
+.url {
+  color: #4a4266;
+  height: 1.5em;
+  line-height: 1.5em;
+  width: 72px;
+  font-size: 0.75em;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: auto;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  -ms-text-overflow: ellipsis;
+  padding-top: 0px;
+  padding-bottom: 8px
 }
 #search_input {
   width: 90%;
@@ -234,10 +272,10 @@ span {
   margin: 0 38px 0 10px;
 }
 .search_bar {
-  box-shadow: 0 0 5px rgba(70,70,40,.255);
+  box-shadow: 0 0 5px rgba(70, 70, 40, .255);
   -webkit-animation: fadeIn 2.5s;
   animation: fadeIn 2.5s;
-  background-color: rgba(255,255,255,.0);
+  background-color: rgba(255, 255, 255, .0);
   border-radius: 3px;
   display: table;
   vertical-align: middle;
@@ -246,7 +284,6 @@ span {
   max-width: 400px;
   margin: 10px auto;
   position: relative;
-  /*z-index: 10;*/
   border-radius: 10px;
 }
 #search_submit {
@@ -259,25 +296,6 @@ span {
   border: none;
   background-color: transparent;
   padding: 0 13px 0 13px
-}
-#content {
-  width: 100%;
-  text-align: center;
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.icon {
-  width: 3em;
-  height: 3em;
-  max-width: 72px;
-}
-.title {
-  background-color: #fffffff;
-  font-size: 16px;
-  height: 50px;
-  line-height: 50px;
-  padding: 0 10px 0 20px;
-  color: #4a4266;
 }
 @-webkit-keyframes flipInX {
   0% {
