--- a/css/index.css
+++ b/css/index.css
@@ -215,8 +215,11 @@ button: hover{
     position: relative;
     left: 5%;
     right: 5%;
-    border-radius: 10px;
     background-color: #ffffff;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #00000080;
     -webkit-animation: fadeIn .5s 1;
     animation: fadeIn .5s 1;
     animation-fill-mode: forwards;
@@ -238,8 +241,11 @@ button: hover{
     font-size: 16px;
     left: 5%;
     right: 5%;
-    border-radius: 10px;
     background-color: #ffffff;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #00000080;
     -webkit-animation: fadeIn .5s 1;
     animation: fadeIn .5s 1;
     animation-fill-mode: forwards;
@@ -272,8 +278,11 @@ button: hover{
     position: relative;
     left: 5%;
     right: 5%;
-    border-radius: 10px;
     background-color: #ffffff;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #00000080;
     -webkit-animation: fadeIn .5s 1;
     animation: fadeIn .5s 1;
     animation-fill-mode: forwards;
@@ -300,8 +309,8 @@ button: hover{
     position: relative;
     left: 5%;
     right: 5%;
-    border-radius: 10px;
     background-color: #ffffff00;
+    border-radius: 10px;
     -webkit-animation: fadeIn .5s 1;
     animation: fadeIn .5s 1;
     animation-fill-mode: forwards;
